# multi-prediction-markets-core

./: .env.config.example  .env.example  README.md  pyproject.toml  requirements-dev.in  requirements.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  IMPLEMENTING_EXCHANGE.md  POLYMARKET_BUILDER_API.md  TYPE_SYSTEM.md
examples/: basic_usage.py
src/prediction_markets/: __init__.py  config.py  factory.py
src/prediction_markets/base/: __init__.py  exchange.py  rest_client.py  types.py  websocket_client.py
src/prediction_markets/common/: __init__.py  exceptions.py  logger.py  rate_limiter.py  utils.py
src/prediction_markets/exchanges/: __init__.py
src/prediction_markets/exchanges/polymarket/: __init__.py  builder_client.py  constants.py  parser.py  polymarket.py  rest_api.py  signer.py  ws_client.py
tests/: conftest.py  test_polymarket.py  test_polymarket_obook.py
tests/polymarket/: __init__.py  test_event_comparison.py  test_events.py  test_filter_events.py  test_orderbook.py  test_search.py  test_split_merge_redeem.py  test_trading.py
